welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:7: error: not enough arguments for method croix: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	croix()
             ^